# hedwig

./: .travis.yml  Cargo.toml  README.md
src/: crypto.rs  keybase.rs  lib.rs  pgp.rs
src/crypto/: ffi.rs  mod.rs
src/keybase/: api.rs  mod.rs
