[package]
name = "hedwig"
version = "0.1.0"
authors = ["Branan Purvine-Riley <branan@puppetlabs.com>"]

[features]
default = []
gtk3 = ["gtk/v3_10", "env_logger"]
curses = ["ncurses", "env_logger"]
keybase = ["hyper", "url"]
nightly = ["clippy"]

[dependencies]
byteorder = "0.4.0"
gcrypt = "0.2.0"
rustc-serialize = "0.3.0"
log = "0.3.0"
hyper = {version = "0.8.0", optional = true}
url = {version = "0.5.0", optional = true}
ncurses = {version = "5.80.0", optional = true}
gtk = {version = "0.0.7", optional = true}
clippy = {version = "0.0.61", optional = true}
env_logger = {version = "0.3.0", optional = true}

[dev-dependencies]
env_logger = "0.3.0"